@@ -8,13 +8,11 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.Instant;
 
-/* o que precisa ser feito:
-    - Listas WANTED e compartilhamento delas
-    - Liberação das SC
-    - Correção (reset) das variaveis flags
-    - Conferir requisitos do PDF
-    - Testes diversos
-    */
+/* Testes falhos:
+   - O processo primeiro da fila falhou, quando o processo que tem acesso a SC libera, ele nao responde nem o outro obtem acesso
+      -Solução: o usuário deve causar um evento que resulte em respostas dos pares, para poder atualizar a lista do grupo
+
+*/
 /*------------------------------------------------------------------------------------------------------------*/
 /*------------------------------------------------Receiver----------------------------------------------------*/
 /*------------------------------------------------------------------------------------------------------------*/
@@ -39,7 +37,7 @@ public class Receiver{
   static Timer timer;
 
   /* monitorando mensagens recebidas do grupo */
-  // as mensagens recebidas pelo grupo sao identificadas com **
+  // as mensagens recebidas pelo grupo sao identificadas com \t\t\t\t**
   public static void main(String args[]) throws Exception {
 
     iniciar(args[0]);
@@ -64,9 +62,13 @@ public class Receiver{
           timer.schedule(new TimerTask(){
             @Override
             public void run() {
-              timer.cancel(); //talvez de problema**
+              timer.cancel();
               publish.esperando_resposta = false;
-              System.out.println("estouro timer");                              //teste
+              //System.out.println("--tam users: " + users.size());
+              // System.out.println("--tam respostas: " + respostas.size());
+              // for(int i = 0; i < respostas.size(); i++){
+              //   System.out.println("-- " + respostas.get(i) + " ");
+              // }
               if(publish.acesso_negado){
                 System.out.println("Seu acesso foi negado!");
                 publish.acesso_negado = false;
@@ -84,6 +86,7 @@ public class Receiver{
                 for(int i = 0; i < users.size(); i++) {
                   if(!respostas.contains(users.get(i))){
                     System.out.println("Houve falha no par " + users.get(i) + "! Pedido cancelado.");
+                    publish.SC_espera.remove(users.get(i));
                     users.remove(i);
                     users_chave.remove(i);
 
@@ -94,8 +97,12 @@ public class Receiver{
 
                     }
                   }
-                }
-                respostas.clear();        // remove todos os elementos da lista
+              }
+              respostas.clear();        // remove todos os elementos da lista
+              //System.out.println("--tam respostas: " + respostas.size());
+              // for(int i = 0; i < respostas.size(); i++){
+              //   System.out.println("-- " + respostas.get(i) + " ");
+              // }
               }
           }, 500);
         }
@@ -106,13 +113,14 @@ public class Receiver{
         else if(mensagem.contains("saiu")) //ok
           retirarUsers(messageIn.getData());
 
-        else if(mensagem.contains("pede acesso"))
+        else if(mensagem.contains("pede acesso")) //ok
           publish.enviarResposta(new String(messageIn.getData()));
 
-        else if(mensagem.contains("respondeu"))
-        {
+        else if(mensagem.contains("respondeu")) //ok
           analisaResposta(messageIn.getData());
-        }
+
+        else if(mensagem.contains("liberou") || mensagem.contains("repassou"))
+          analisaLiberacao(new String(messageIn.getData()));
 
     }
     socket.leaveGroup(grupo);
@@ -168,7 +176,7 @@ public class Receiver{
 
       //se a lista ainda não contem o novo processo
       if(!(users.contains(novo_processo))){
-        System.out.println("**" + rest);  //imprime mensagem recebida
+        System.out.println("\t\t\t\t**" + rest);  //imprime mensagem recebida
 
         KeyFactory fact = KeyFactory.getInstance("RSA");
         PublicKey pub = fact.generatePublic(new X509EncodedKeySpec(pubb));
@@ -184,7 +192,7 @@ public class Receiver{
       }
 
       //inicia apenas quando existem 3 processos ou mais
-      if(users.size() > 1){                                                     //mudar para 2
+      if(users.size() > 2){
         if(!publish.requisito_n3)
           t.start();
         publish.requisito_n3 = true;
@@ -193,38 +201,107 @@ public class Receiver{
         System.out.println("Esperando novos processos...");
 
   }
+
   /* atualiza lista de processos online quando um deles sai*/
   public static void retirarUsers(byte[] m){
     String mensagem = new String(m);
-    System.out.println("**" + mensagem);  //imprime mensagem recebida
+    System.out.println("\t\t\t\t**" + mensagem);  //imprime mensagem recebida
     String[] s = mensagem.split(" ");
     String processo_fora = s[0];
 
-    if(processo_fora.equals(meu_nome)) //nao sei se conserta nao imprimir a propria saida**
+    if(processo_fora.equals(meu_nome))
       return;
 
     int index  = users.indexOf(processo_fora);
+    publish.SC_espera.remove(users.get(index));
     users.remove(index);
     users_chave.remove(index);
 
     imprimeLista();
-    //chamar atualizaWanted
   }
 
+  /* imprime lista de processos no grupo */
   public static void imprimeLista(){
-    System.out.println("Lista de processos atualizada: ");
+    System.out.println("Processos no grupo: ");
     for(int i = 0; i < users.size(); i++){
       System.out.println(" -" + users.get(i));
     }
   }
 
   /* atualiza filas de WANTED (apenas quando tem o HELD). Atualiza quando alguem sai*/
-  public void atualizaWanted(){
+  public static void atualizaWanted(){
+    //atualizar quando sair, monitorar para falha no par
 
   }
 
+  /* analisa alerta de liberação enviada */
+  //mensagem da forma "X liberou SC -> primeiro segundo terceiro"
+  public static void analisaLiberacao(String m) throws Exception{
+    System.out.println("\t\t\t\t**" + m);
+    m = m.trim();
+    String[] s = m.split(" ");
+    //se o alerta for simples, não existiam processos aguardando
+    if(s.length < 4){return;}
+
+    String primeiro = s[4]; //o primeiro elemento da fila sempre estará no índice 4
+    int tamanho_fila = s.length - 4;  //considerando também o primeiro
+    int i;
+
+    //faz ações quando a SC que foi liberada é a aguardada e você é o primeiro
+    if((publish.estadoSC1.equals("WANTED") && m.contains("SC1")) ||
+       (publish.estadoSC2.equals("WANTED") && m.contains("SC2")))
+    {
+      if(meu_nome.equals(primeiro)){
+        //altera estado de posse das SC
+        System.out.println("Conseguiu acesso! Digite 0 para atualizar o menu.");
+        if(m.contains("SC1"))
+          publish.estadoSC1 = "HELD";
+        else if(m.contains("SC2"))
+          publish.estadoSC2 = "HELD";
+
+        //copiando lista de espera enviada
+        System.out.println("tam fila: " + tamanho_fila);
+        if(tamanho_fila > 1){
+          for(i = 0; i < tamanho_fila - 1; i++){
+              publish.SC_espera.add(s[5+i]);  //começa em 5 pois é o resto da fila
+          }
+        }
+        // System.out.println("Lista de espera recebida: ");
+        // for(i = 0; i < publish.SC_espera.size(); i++){                                  //teste
+        //   System.out.println(publish.SC_espera.get(i) + " ");
+        // }
+      }
+    }
+
+    // caso especial quando o processo abriu mão da fila para requisitar outra SC
+    else if(meu_nome.equals(primeiro)){
+        String mensagem = meu_nome + " repassou " + s[2];
+        if(tamanho_fila > 1){
+          for(i = 0; i < tamanho_fila - 1; i++){
+            mensagem += s[5+i] + " ";
+          }
+        }
+        byte[] mensagem_b = mensagem.getBytes();
+        publish.enviarDatagrama(mensagem_b);
+    }
+  }
+
+  /* analisa respostas recebidas, apenas quando pede acesso */
+  public static void analisaResposta(byte[] m) throws Exception{
+    //caso o próprio processo tenha feito o pedido
+    if((publish.estadoSC1.equals("WANTED") || publish.estadoSC2.equals("WANTED")) && publish.esperando_resposta){ //caracteriza pedido
+      if(testarAutenticidade(m, true) == 1){      //assinatura verificada com resposta NO
+        publish.acesso_negado = true;       //uma resposta negativa é suficiente para negar o acesso
+      }
+    }
+    //caso não tenha feito o pedido
+    else{
+      testarAutenticidade(m, false);
+    }
+  }
+
   /* testar autenticidade do par */
-  public static int testarAutenticidade(byte[] m) throws Exception{
+  public static int testarAutenticidade(byte[] m, boolean adicionar) throws Exception{
     byte[] m_assinada = new byte[64];  //a mensagem assinada tem 64 bytes
     byte[] restb = new byte[500];      //mesmo tamanho do buffer de dados
     int n_espaco = 0;
@@ -237,7 +314,7 @@ public class Receiver{
       if(n_espaco==2) //espaco depois da palavra chave "respondeu"
         break;
     }
-    i++;             //posicao inicial da mensagem assinada                     //(ok)
+    i++;             //posicao inicial da mensagem assinada
 
     System.arraycopy(m, 0, restb, 0, i);
     System.arraycopy(m, i, m_assinada, 0, 64);
@@ -246,14 +323,21 @@ public class Receiver{
     String[] s = rest.split(" ");
     String processo_respondeu = s[0];
 
-    if(decode(processo_respondeu, m_assinada) == 2){
-      System.out.println("**" + rest + " OK (verified)");
-      respostas.add(processo_respondeu);
+    int resultado = decode(processo_respondeu, m_assinada);
+    if(resultado == 2){
+      System.out.println("\t\t\t\t**" + rest + " OK (verified)");
+      if(adicionar){
+        //System.out.println("--adicionando a respostas: " + processo_respondeu);
+        respostas.add(processo_respondeu);
+      }
       return 2;
     }
-    else if(decode(processo_respondeu, m_assinada) == 1){
-      System.out.println("**" + rest + " NO (verified)");
-      respostas.add(processo_respondeu);
+    else if(resultado == 1){
+      System.out.println("\t\t\t\t**" + rest + " NO (verified)");
+      if(adicionar){
+        //System.out.println("--adicionando a respostas: " + processo_respondeu);
+        respostas.add(processo_respondeu);
+      }
       return 1;
     }
     else{
@@ -261,19 +345,6 @@ public class Receiver{
       return 0;
     }
 
-  }
-  /* analisa respostas recebidas, apenas quando pede acesso */
-  public static void analisaResposta(byte[] m) throws Exception{
-    //caso o próprio processo tenha feito o pedido
-    if((publish.estadoSC1.equals("WANTED") || publish.estadoSC2.equals("WANTED")) && publish.esperando_resposta){ //caracteriza pedido
-      if(testarAutenticidade(m) == 1){      //assinatura verificada com resposta NO
-        publish.acesso_negado = true;       //uma resposta negativa é suficiente para negar o acesso
-      }
-    }
-    //caso não tenha feito o pedido
-    else{
-      testarAutenticidade(m);
-    }
   }
 
   /* decodificar uma resposta (autenticidade) usando chave pública */
@@ -285,9 +356,9 @@ public class Receiver{
     assinatura.initVerify(users_chave.get(index));        //initialize this object for verifing using public key
     assinatura.update(ok.getBytes());                     //updates the data to be verified by a byte
     boolean verificadoOK = assinatura.verify(m_assinada); //verifies the passed-in signature.
+
     if(verificadoOK)
       return 2;
-
     else{
       assinatura = Signature.getInstance("SHA256withRSA");
       assinatura.initVerify(users_chave.get(index));
@@ -322,8 +393,8 @@ class Publisher extends Thread{
   // portanto, é necessário apenas uma fila de espera.
   // No caso do processo ser HELD ele irá inserir os elementos que querem acessar o recurso.
 
-  LinkedList<String> SC_espera;           // usuários na fila de SC1
-  LinkedList<Long> timestamp_espera; // timestamp de pedido daqueles usuários
+  public LinkedList<String> SC_espera;           // usuários na fila de SC1, lista encadeada pois facilita o uso de timestamp
+  //LinkedList<Integer> timestamp_espera; // timestamp de pedido daqueles usuários
 
   public boolean inicia_timer;
   public boolean acesso_negado;
@@ -343,7 +414,7 @@ class Publisher extends Thread{
     this.estadoSC2 = "RELEASED";
 
     SC_espera = new LinkedList<String>();
-    timestamp_espera = new LinkedList<Long>();
+    //timestamp_espera = new LinkedList<Integer>();
 
     this.acesso_negado = false;
     this.inicia_timer = false;
@@ -356,8 +427,8 @@ class Publisher extends Thread{
   public void run(){
     //nao pode querer (WANTED) acessar as duas SC ao mesmo tempo
     //nao pode digitar qualquer coisa
-    String menu1 = "Digite o número correspondente à sua escolha:\n1-Acessar SC1\n2-Acessar SC2\n3-Sair";
-    String menu2 = "Digite o número correspondente à sua escolha:\n1-Liberar SC\n2-Sair";
+    String menu1 = "\t\tMenu:\n\t\t1-Acessar SC1\n\t\t2-Acessar SC2\n\t\t3-Sair";
+    String menu2 = "\t\tMenu:\n\t\t1-Liberar SC\n\t\t2-Sair";
     String invalido = "Este valor digitado é inválido!";
 
     try{
@@ -369,8 +440,11 @@ class Publisher extends Thread{
           {
             System.out.println(menu2);
             String userInput = System.console().readLine();
+
+            if(userInput.equals("0")){continue;}
+
             /* Liberar */
-            if(userInput.equals("1")){
+            else if(userInput.equals("1")){
               transferirSC();
             }
             /* Sair */
@@ -379,7 +453,7 @@ class Publisher extends Thread{
                 transferirSC();
                 enviarSaida();
                 sair = true;
-            }
+              }
               else{
                 System.out.println(invalido);
               }
@@ -391,29 +465,40 @@ class Publisher extends Thread{
           {
             System.out.println(menu1);
             String userInput = System.console().readLine();
+
+            if(userInput.equals("0")){continue;}
+
             /* Acessar SC1 */
             if(userInput.equals("1")){
-              //caso já esteja esperando outra SC
-              if(estadoSC2.equals("WANTED")){
-                System.out.println("Você já está na fila!");
-                continue;
-              }
-
-              estadoSC1 = "WANTED";
-              enviarPedido(1);
-              inicia_timer = true;
-            }
-            /* Acessar SC2 */
-            else if (userInput.equals("2")){
               //caso já esteja esperando outra SC
               if(estadoSC1.equals("WANTED")){
                 System.out.println("Você já está na fila!");
                 continue;
               }
+              //se processo já estava aguardando a liberação da outra SC, ele irá abrir mão do aguardo
+              else if(estadoSC2.equals("WANTED")){
+                estadoSC2 = "RELEASED";
+              }
+
+              estadoSC1 = "WANTED";
+              inicia_timer = true;
+              enviarPedido(1);
+            }
+            /* Acessar SC2 */
+            else if (userInput.equals("2")){
+              //caso já esteja esperando outra SC
+              if(estadoSC2.equals("WANTED")){
+                System.out.println("Você já está na fila!");
+                continue;
+              }
+              //se processo já estava aguardando a liberação da outra SC, ele irá abrir mão do aguardo
+              else if(estadoSC1.equals("WANTED")){
+                estadoSC1 = "RELEASED";
+              }
 
               estadoSC2 = "WANTED";
-              enviarPedido(2);
               inicia_timer = true;
+              enviarPedido(2);
             }
             /* Sair */
             else if (userInput.equals("3")){
@@ -445,13 +530,11 @@ class Publisher extends Thread{
     enviarDatagrama(mensagem);
   }
 
-  /* enviar pedido à seção crítica na forma <Tempo,Id> MUDAR*/
+  /* enviar pedido à seção crítica na forma <Tempo,Id> -> apenas se der tempo */
   public void enviarPedido(int sc) throws IOException{
     LocalTime agora = LocalTime.now();
-    DateTimeFormatter form = DateTimeFormatter.ofPattern("HH:mm:AAAAA");
-    //DateFormat format = new SimpleDateFormat("HH:mm:ss.AAAAAA");
-    //Instant instante = Instant.now();
-    //long agora = instante.toEpochMilli();
+    DateTimeFormatter form = DateTimeFormatter.ofPattern("HH:mm:ss");
+
     String m = nome + " pede acesso a SC" + sc + " em " + agora.format(form);
     byte[] b_m = m.getBytes();
     enviarDatagrama(b_m);
@@ -460,7 +543,7 @@ class Publisher extends Thread{
   /* enviar resposta a pedido de SC */
   public void enviarResposta(String mensagem) throws Exception{
     // mensagem é da forma " X pede acesso a Y em Z"
-    System.out.println("**" + mensagem);
+    System.out.println("\t\t\t\t**" + mensagem);
     String[] s = mensagem.split(" ");
     String nome_respondeu = s[0]; //usuario que está pedindo acesso
 
@@ -473,7 +556,7 @@ class Publisher extends Thread{
         resposta = 0;
     }
     else if(mensagem.contains("SC2")){
-      if(estadoSC1.equals("RELEASED") || estadoSC1.equals("WANTED"))
+      if(estadoSC2.equals("RELEASED") || estadoSC2.equals("WANTED"))
         resposta = 1;
       else  //processo possui o acesso à SC2
         resposta = 0;
@@ -488,47 +571,68 @@ class Publisher extends Thread{
     System.arraycopy(nb, 0, resultado, 0, nb.length);
     System.arraycopy(rb, 0, resultado, nb.length, rb.length);
 
+    // envio da resposta com assinatura digital
     enviarDatagrama(resultado);
-    System.out.println(" parse s[6]: " + s[6]);  //tempo em HH:mm:AAAAA
-    //coloca na lista WANTED processo que pediram(condição: não colocar o próprio, não incluir se você não é HELD)
+
+    // coloca na lista WANTED processo que pediram(condição: não colocar o próprio, não incluir se você não é HELD)
     if(!nome_respondeu.equals(nome) &&                           //não deve incluir o próprio nome na listas
+       !SC_espera.contains(nome_respondeu) &&                    //o processo que já pediu não entra na lista novamente
       (estadoSC1.equals("HELD") && mensagem.contains("SC1")||    //incluir se pedido é para SC1 e você tem a SC1
        estadoSC2.equals("HELD") && mensagem.contains("SC2")))    //inlcuir se pedido é para SC2 e você tem a SC2
     {
-      //s[6] tem a hora
-      DateTimeFormatter form = DateTimeFormatter.ofPattern("HH:mm:AAAAA");
-      LocalTime tempo = LocalTime.parse(s[6], form);
-      //Long tempo = Long.parseLong(s[6]);
 
-      //caso algum processo tenha sido adicionado fora de ordem
-      if(tempo < timestamp_espera.get(0)){
-       SC_espera.addFirst(nome_respondeu);
-      timestamp_espera.addFirst(tempo);
-      }
-      else{
+      //int tempo_sec = converteTempo(s[6]);
+      //caso esta requisição tenha sido feita antes do primeiro da fila, então adicionar processo como primeiro
+      //if(if SC_espera.size() != 0){ //caso a lista esteja vazia
+      //   if(tempo_sec < timestamp_espera.getFirst())
+      //     SC_espera.addFirst(nome_respondeu);
+      //     //timestamp_espera.addFirst(tempo_mili);
+      // }
+      // else{
        SC_espera.add(nome_respondeu);
-       timestamp_espera.add(tempo);
-      }
-    }
+       //timestamp_espera.add(tempo_mili);
 
-    for(int i = 0; i < SC_espera.size(); i++){                                  //teste
-      System.out.println("Lista de espera para " + s[4] + ": ");
-      System.out.println(" -" + SC_espera.get(i) + " em " + timestamp_espera.get(i));
-    }
+       // Imprime a lista de espera
+       System.out.println("Lista de espera para " + s[4] + ": ");                  //teste
+       for(int i = 0; i < SC_espera.size(); i++){
+         System.out.println(" -" + SC_espera.get(i));
+       }
+      }
+
+
 
   }
 
-  /* enviar lista de WANTED com assinatura digital */
-  public void transferirSC(){
+  /* alertar outros processos da liberação e enviar lista de espera */
+  //mensagem da forma "X liberou SC -> primeiro segundo terceiro"
+  public void transferirSC() throws IOException{
+    //descobrir quando SC tem acesso
+    int sc;
     if(estadoSC1.equals("HELD")){
+      sc = 1;
       estadoSC1 = "RELEASED";
-
     }
-
     else if(estadoSC2.equals("HELD")){
+      sc = 2;
       estadoSC2 = "RELEASED";
     }
+    else { System.out.println("Erro na posse de SC!"); return;}
 
+    //criação da mensagem
+    String mensagem = nome + " liberou SC" + sc;
+    if(SC_espera.size() != 0){  //tem processos na lista de espera
+      mensagem += " -> ";
+      for(int i = 0; i < SC_espera.size(); i++){
+        mensagem +=  SC_espera.get(i) + " ";
+        // if(i !=  SC_espera.size()-1)
+        //   mensagem += " ";
+      }
+    }
+    SC_espera.clear();
+    byte[] m = mensagem.getBytes();
+
+    //envio da mensagem
+    enviarDatagrama(m);
   }
 
   /* envia anuncio de saida na forma "X saiu" */
@@ -562,11 +666,13 @@ class Publisher extends Thread{
 
   /* converte hora "HH:mm:AAAAA" para milisegundos*/
   public int converteTempo(String tempo){
-    String[] s = tempo.split(":"); //sendo que s[0] é hora, s[1] é minuto e s[2] é milisegundos
-    int hora = Integer.parseInteger(s[0]);
-    int minuto = Integer.parseInteger(s[1]);
-    int mili = Integer.parseInteger(s[2]);
-    int tempo_mili = hora*60*60000 + minuto*60000 + mili;
-    return tempo_mili;
+    String[] s = tempo.split(":"); //sendo que s[0] é hora, s[1] é minuto e s[2] é segundo
+    int hora = Integer.parseInt(s[0]);
+    System.out.println(hora);
+    int minuto = Integer.parseInt(s[1]);
+    System.out.println(minuto);
+    int tempo_sec = hora*60*60 + minuto*60;
+
+    return tempo_sec;
   }
 }
